# small-talk

./: .gitignore  Cargo.toml  teste.js  teste.py  teste2.py
src/: channel_manager.rs  lib.rs  main.rs  models.rs  protocol.rs  schema.rs
src/components/: app.rs  errors.rs  mod.rs
src/conn/: mod.rs
src/dto/: command.rs  header.rs  mod.rs
tests/: mod.rs
