[package]
name = "small-talk"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.27.0"
diesel = { version = "2.1.6", features = ["sqlite"] }
dotenvy = "0.15.7"
json = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
ratatui = "0.26.3"
uuid = "1.8.0"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/app.rs"